# bnbhack-cmc-t2

./: .env.example  .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
artifacts/: deep_replay.json  sweep_results.json  sweep_summary.md
demo/: run_demo.py  validate_skill.py
docs/: DATA_PROVENANCE.md  FREEZE-W.md  FREEZE.md  SUBMISSION.md
lab/: __init__.py  band_recon.py  benchmarks.py  calibration_w.py  ch.py  classifier.py  classifiers_w.py  dataset.py  dd_guard.py  deep_replay.py  engine.py  export.py  features.py  features_w.py  gate.py  gate_w.py  hooks.py  hooks_w.py  lock_w.py  metrics.py  null_fast.py  oi_cg.py  panels_w.py  report_figs.py  rules.py  rules_w.py  sweep.py  sweep_w.py  variants.py  variants_w.py  walkforward.py
scripts/: backfill_fear_greed.py  backfill_funding.py  backfill_funding_eth_sol.py  backfill_klines_eth_sol.py  export_oi_cg.py  funding_calibration_poll.py  gate0_dump.py  mcp_client.py  prove_cal_fast.sh  prove_null_fast.sh  run_w_calibration.sh
tests/: test_backfill_eth_sol.py  test_backfill_fg.py  test_backfill_funding.py  test_benchmarks.py  test_cal_fast.py  test_calibration_w.py  test_classifier.py  test_classifiers_w.py  test_dataset.py  test_dd_guard.py  test_demo_units.py  test_engine.py  test_export_csvs.py  test_features.py  test_features_w.py  test_gate.py  test_gate_w.py  test_hooks.py  test_hooks_w.py  test_lock_w.py  test_metrics.py  test_null_fast.py  test_oi_cg.py  test_panels_w.py  test_rules.py  test_rules_w.py  test_sweep.py  test_sweep_w.py  test_variants.py  test_variants_w.py  test_walkforward.py
(+76 files in other folders)
